# Decaf-Lang

./: .gitignore  README.md
code-gen/: CMakeLists.txt  Makefile  Scope.cc  Scope.h  SymbolTable.cc  SymbolTable.cpp  SymbolTable.h  Vtable.cc  Vtable.h  ast.cc  ast.h  ast_decl.cc  ast_decl.h  ast_expr.cc  ast_expr.h  ast_program.cc  ast_stmt.cc  ast_stmt.h  ast_type.cc  codegen.cc  codegen.h  errors.cc  hashtable.cc  list.h  main.cc  mips.cc  mips.h  parser.y  run  scanner.l  tac.cc  tac.h  utility.cc  utility.h  y.output  y.tab.c  y.tab.h
code-gen/our_tests/correct/: class-edge.out  class-members.out  inherit-members.out
code-gen/our_tests/in/: bytes-edge.decaf  class-edge.decaf  class-members.decaf  class-methods.decaf  class-methods.decaf.asm  class-test.decaf  class.decaf  inherit-members.decaf  inherit-override.decaf  inherit-simple.decaf  inherit-test.decaf  math.decaf  simple.decaf
code-gen/our_tests/ours/: class-members.out  class-methods.out  inherit-override.out  inherit-test.out  math.out  simple.out
code-gen/samples/: badnewarr.out  badsub.out  blackjack.decaf.asm  blackjack.out  factorial.out  fib.out  matrix.decaf  matrix.out  matrix.s  queue.out  sort.out  stack.out  t1.out  t2.out  t3.out  t4.out  t5.decaf.asm  t5.out  t6.out  t7.out  t8.out
code-gen/spim_tests/correct/: badnewarr.out  t8.out
code-gen/spim_tests/in/: queue.decaf
code-gen/spim_tests/ours/: matrix.out  queue.out  queue.tac  stack.out  t1.out  t2.out  t3.out  t6.out  t7.out  t8.out
code-gen/tac_tests/correct/: badnewarr.txt  badsub.txt  blackjack.txt  factorial.txt  fib.txt  (+12 more)
(+270 files in other folders)
